# lox-project

./: .gitignore  LICENSE  README.md  lox.py  pyproject.toml  test_results.txt
clox/: CMakeLists.txt  chunk.c  compiler.c  debug.c  main.c  object.c  object.h  scanner.c  scanner.h  value.h  vm.c
clox/src/: chunk.c  chunk.h  common.h  compiler.c  compiler.h  debug.c  debug.h  main.c  memory.c  memory.h  object.c  object.h  scanner.c  scanner.h  table.c  table.h  value.c  value.h  vm.c  vm.h
cpplox/: CMakeLists.txt
cpplox/src/: chunk.cpp  chunk.h  compiler.cpp  debug.cpp  main.cpp  memory.cpp  object.cpp  object.h  scanner.cpp  scanner.h  table.cpp  table.h  value.cpp  value.h  vm.cpp  vm.h
cpplox/src/cpplox/bytecode/: chunk.cpp  chunk.h
cpplox/src/cpplox/frontend/: compiler.cpp  compiler.h  scanner.cpp  scanner.h
cpplox/src/cpplox/runtime/: memory.cpp  memory.h  object.cpp  object.h  table.cpp  table.h  value.cpp  value.h  vm.cpp  vm.h
cpplox/src/cpplox/support/: common.h  debug.cpp  debug.h
eloxir/: CMakeLists.txt  ISSUES.md  NOTES.md  STATUS.md  STATUS_CHECKLIST.md
eloxir/codegen/: BuiltinsIR.cpp  BuiltinsIR.h  CMakeLists.txt  CodeGenPlan.cpp  CodeGenPlan.h  CodeGenVisitor.cpp  CodeGenVisitor.h  PlannedLowering.cpp
eloxir/frontend/: CMakeLists.txt  CompileError.h  Expr.cpp  Expr.h  Parser.cpp  Parser.h  Resolver.cpp  Resolver.h  Scanner.cpp  Scanner.h  Stmt.cpp  Stmt.h  Token.h  Visitor.h
eloxir/ir/: CMakeLists.txt  LoxIR.cpp  LoxIR.h  LoxIRPrinter.cpp  LoxIRPrinter.h  LoxIRVerifier.cpp  LoxIRVerifier.h  LoxPassManager.cpp  LoxPassManager.h
eloxir/jit/: CMakeLists.txt  EloxirJIT.cpp  EloxirJIT.h  OptimisationPipeline.h
eloxir/llvm/: BuiltinsIR.cpp  CMakeLists.txt  LoxIRCodeGen.cpp  LoxIRCodeGen.h
eloxir/lowering/: AstLowerer.cpp  AstLowerer.h  CMakeLists.txt
eloxir/opt/: CMakeLists.txt  LoxOptimizationPasses.cpp  LoxOptimizationPasses.h
eloxir/runtime/: CMakeLists.txt  ObjShape.cpp  ObjShape.h  RuntimeAPI.cpp  RuntimeAPI.h  RuntimeCacheStats.cpp  RuntimeSymbols.cpp  RuntimeSymbols.h  Value.h
eloxir/tests/: test_cache_stats.py  test_runtime_regressions.py  test_scan_formatter.py
eloxir/tests/regression/: add_non_string_objects.lox  bound_method_closure.lox  equals_heap_objects.lox  for_no_increment.lox  for_syntax_bar.lox  inherit_from_nil.lox  loop_capture.lox  loop_too_large_compile_error.lox  method_capture.lox  nested_closure_capture.lox  object_identity_equality.lox  print_native.lox  property_call_evaluation_order.lox  stack_overflow.lox  test_inherit_from_nil.py  test_limit_too_many_locals.py  too_many_locals.lox
eloxir/tools/: repl.cpp  run_official_tests.py
eloxir/tools/tests/: test_run_official_tests.py
jlox/: build.gradle  settings.gradle
jlox/src/com/craftinginterpreters/lox/: AstPrinter.java  Resolver.java
jlox/src/main/java/com/craftinginterpreters/lox/: Interpreter.java  Lox.java  Parser.java
loxctl/: __init__.py  __main__.py  cli.py  commands.py  expectations.py  models.py  paths.py  processes.py  registry.py  suite.py
loxpp/: CMakeLists.txt
loxpp/src/: ast_printer.cpp  ast_printer.h  callable.h  environment.cpp  environment.h  error_reporter.cpp  error_reporter.h  expr.cpp  expr.h  interpreter.cpp  interpreter.h  lox_class.cpp  lox_class.h  lox_function.cpp  lox_function.h  lox_instance.cpp  lox_instance.h  main.cpp  parser.cpp  parser.h  resolver.cpp  resolver.h  runtime_error.h  scanner.cpp  scanner.h  stmt.cpp  stmt.h  token.cpp  token.h  value.cpp  value.h
src/com/craftinginterpreters/lox/: AstPrinter.java  Interpreter.java  Lox.java  LoxClass.java  LoxFunction.java  Parser.java  Resolver.java  Scanner.java
src/com/craftinginterpreters/tool/: GenerateAst.java
test/expressions/: evaluate.lox
test/scanning/: identifiers.lox  keywords.lox  numbers.lox  punctuators.lox  strings.lox  whitespace.lox
