[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "lox-project-orchestrator"
version = "0.2.0"
description = "Command-line orchestration for the repository's Lox implementations."
readme = "README.md"
requires-python = ">=3.11"
authors = [
  { name = "Lox Project Maintainers" }
]
dependencies = []

[project.scripts]
lox = "loxctl.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["loxctl*"]
